# chess_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  game.out
src/: main.cpp
src/gameCore/: Board.cpp  Board.hpp  Chess_game.cpp  Chess_game.hpp  Piece.hpp
src/gameCore/enums/: Color.hpp  PieceType.hpp
src/gameCore/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceMovement.cpp  PieceMovement.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
src/tui/: BoardBuilder.cpp  BoardBuilder.hpp  a.cpp  a.hpp
tests/: CMakeLists.txt  ExampleTest.cpp
tests/pieces/: BishopTest.cpp  KingTest.cpp  KnightTest.cpp  PawnTest.cpp  QueenTest.cpp  RookTest.cpp
